# burnintest_plugin

./: README.md  pyproject.toml
src/burnintest_plugin/: __init__.py  bitinterface.py
