[project]
dynamic = ["version"]
name = "burnintest-plugin"
description = "Python bindings for PassMark's BurnInTest plugin interface"
authors = [
    { name = "Timothy Lassiter", email = "tim.lassiter@ruggedscience.com" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = []

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
